--- a/requirements.txt
+++ b/requirements.txt
@@ -1,30 +1,48 @@
 alembic==1.8.1
+Babel==2.10.3
 blinker==1.5
 certifi==2022.6.15
 charset-normalizer==2.1.1
 click==8.1.3
+decorator==5.1.1
 dnspython==2.2.1
+email-validator==1.2.1
 eventlet==0.33.1
 falcon==3.1.0
 Flask==2.2.2
 Flask-Admin==1.6.0
+Flask-BabelEx==0.9.4
+Flask-Login==0.6.2
+Flask-Mail==0.9.1
 Flask-Migrate==3.1.0
+Flask-Principal==0.4.0
+Flask-Security==3.0.0
 Flask-SQLAlchemy==2.5.1
+Flask-WTF==1.0.1
 greenlet==1.1.3
 gunicorn==20.1.0
 idna==3.3
+infinity==1.5
+intervals==0.9.2
 itsdangerous==2.1.2
 Jinja2==3.1.2
 Mako==1.2.2
 MarkupSafe==2.1.1
 mongoengine==0.24.2
 mysql-connector==2.2.9
+passlib==1.7.4
 protobuf==3.20.1
 pymongo==4.2.0
 python-dotenv==0.21.0
+pytz==2022.2.1
 requests==2.28.1
 six==1.16.0
+speaklater==1.3
 SQLAlchemy==1.4.40
+SQLAlchemy-Utils==0.38.3
 urllib3==1.26.12
+validators==0.20.0
 Werkzeug==2.2.2
 WTForms==3.0.1
+WTForms-Alchemy==0.18.0
+WTForms-Components==0.10.5
